# vq-vae-with-geodesic-quantization

./: .gitignore  Standard_VAE.py  main.py  pyproject.toml
src/: create_codebook.py  create_codebooks.py  test_codebooks.py  test_geodesic_knn_graph.py  test_transformer.py  test_vae.py  train_geodesic_knn_graph.py  train_transformer.py  train_vae.py
src/models/: kmeans_euclidean.py  kmeans_geodesic.py  knn_graph.py  transformer.py  vae.py  vq_codebook.py
src/utils/: analysis.py  dataloader.py  device.py
